...
                android:text="Nama Produk"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
...
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_name" />

            <com.google.android.material.textfield.TextInputLayout

                android:id="@+id/et_price"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
...
                android:text="Lokasi"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_price" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_city"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
...
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_city">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:hint="Pilih Kota" />

            </com.google.android.material.textfield.TextInputLayout>
...
                app:chipSpacing="8dp"
                app:singleSelection="true"
                android:layout_marginVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_kategori"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_category"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_marginTop="8dp"
                android:drawableEnd="@drawable/ic_baseline_add_24"
                android:drawableTint="@color/primary_60"
                android:minWidth="0dp"
                android:paddingHorizontal="4dp"
                android:paddingVertical="8dp"
                android:text="Tambah Kategori"
                android:textAllCaps="false"
                android:textColor="@color/primary_60"
                app:cornerRadius="4dp"
                app:layout_constraintStart_toStartOf="@+id/tv_kategori"
                app:layout_constraintTop_toBottomOf="@+id/chip_group_selected_category" />

...
                android:text="Deskripsi"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_category" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_description"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
...
                android:fontFamily="@font/montserrat_medium"
                android:text="Foto Produk"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description" />

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:src="@drawable/add_img"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_photo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_preview"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="24sp"
                android:paddingVertical="14sp"
                android:text="Preview"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_terbit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_photo"
                app:strokeColor="@color/purple_04"
                app:strokeWidth="1dp" />

            <com.google.android.material.button.MaterialButton
...
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:backgroundTint="@color/primary_60"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="24sp"
                android:paddingVertical="14sp"
                android:text="Terbitkan"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_preview"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_login" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="Sign In"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />
...
