<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_dialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_placeholder"
            android:layout_width="60dp"
            android:layout_height="8dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:contentDescription="@string/title_choose_image_provider"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_remove_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity=""
            android:layout_marginTop="1dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="1dp"
            android:minWidth="0dp"
            android:paddingHorizontal="4dp"
            android:paddingVertical="8dp"
            android:text="Simpan"
            android:textAllCaps="false"
            android:textColor="@color/Green"
            app:cornerRadius="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_search"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="14sp"
        app:endIconDrawable="@drawable/ic_baseline_search_24"
        app:endIconMode="custom"
        app:hintAnimationEnabled="false"
        app:boxCornerRadiusTopStart="16dp"
        app:boxCornerRadiusTopEnd="16dp"
        app:boxCornerRadiusBottomStart="16dp"
        app:boxCornerRadiusBottomEnd="16dp"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_placeholder">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Cari kategori"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">
        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_selected_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:chipSpacing="8dp"
            app:singleSelection="true"
            android:layout_marginVertical="16dp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_select_category"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_search"
        tools:listitem="@layout/select_category_list_layout" />

<!--    <Button-->
<!--        android:id="@+id/btn_save"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="32dp"-->
<!--        android:paddingHorizontal="28dp"-->
<!--        android:paddingVertical="8dp"-->
<!--        android:text="Pilih Kategori"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="#ffffff"-->
<!--        app:backgroundTint="@color/Green"-->
<!--        app:cornerRadius="16dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/rv_select_category"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

</LinearLayout>