<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="10dp"
    android:layout_marginVertical="4dp"
    android:layout_marginHorizontal="8dp">

    <CheckBox
        android:id="@+id/cb_category"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:button="@null"
        android:background="@android:color/transparent"
        android:drawableEnd="?android:attr/listChoiceIndicatorMultiple"
        android:fontFamily="@font/montserrat_medium"
        android:paddingHorizontal="12dp"
        android:paddingVertical="12dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Elektronik" />

</com.google.android.material.card.MaterialCardView>